--- a/server/package.json
+++ b/server/package.json
@@ -17,6 +17,8 @@
     "body-parser": "1.14.1",
     "express": "4.13.3",
     "fs": "0.0.2",
+    "graceful-fs": "^4.1.11",
+    "minimatch": "^3.0.4",
     "multer": "1.1.0"
   }
 }
