--- a/prepros-6.config
+++ b/prepros-6.config
@@ -4,7 +4,9 @@
   "exportConfig": true,
   "fileConfigs": [],
   "fileTree": {
-    "expandedDirs": [],
+    "expandedDirs": [
+      "server"
+    ],
     "hideSystemFiles": true,
     "systemFiles": [
       ".*",
@@ -21,7 +23,8 @@
     {
       "path": "client/index.jade",
       "imports": [
-        "client/directives/inject.jade"
+        "client/directives/inject.jade",
+        "client/directives/nav_inject.jade"
       ]
     }
   ],
