front-page renovation

--- a/prepros-6.config
+++ b/prepros-6.config
@@ -24,12 +24,19 @@
       "path": "client/index.jade",
       "imports": [
         "client/directives/inject.jade",
-        "client/directives/nav_inject.jade"
+        "client/directives/nav_inject.jade",
+        "client/directives/footer.jade"
+      ]
+    },
+    {
+      "path": "client/css/style.scss",
+      "imports": [
+        "client/css/colors.scss"
       ]
     }
   ],
   "projectView": {
-    "selectedView": "file-tree"
+    "selectedView": "log"
   },
   "fileWatcher": {
     "enabled": true,
